--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
 	  <meta charset="UTF-8">
@@ -11,6 +12,9 @@
 
 <h1>Resources</h1>
 <h3>This is a place I'm going to store resources for myself and other Udacity front end students.</h3>
-
+<h4>1. Grow With Google Scholarship</h2>
+<p>Congrats on everyone getting a scholarship!</p>
+<h4>2. HTML Syntax</h4>
+<h5><a href="https://codepen.io/alexanderstran/pen/vprpay">L4 Mockup to Article</a></h5>
 	</body>
 </html>
