Adding more content

--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
 <head>
 	  <meta charset="UTF-8">
 	  <title>
-	  	Udacity Google Scholars Frontend Resources
-	  </title>
+Frontend Web Dev Learning	  </title>
 </head>
 <body>
 	<header>
 	</header>
 
 <h1>Resources</h1>
-<h3>This is a place I'm going to store resources for myself and other Udacity front end students.</h3>
-<h4>1. Grow With Google Scholarship</h2>
+<h3>This is a place I'm going to store resources for myself and others on front end web dev projects that I'm doing through various learning resources.</h3>
+<h2> Udacity - Grow with Google Scholarship </h2>
+<h4>1. UpGrow With Google Scholarship</h2>
 <p>Congrats on everyone getting a scholarship!</p>
 <h4>2. HTML Syntax</h4>
 <h5><a href="https://codepen.io/alexanderstran/pen/vprpay">L4 Mockup to Article</a></h5>
+<p> This was a nice review of basic HTML. I missed a superscript and it was good to practice being detail oriented especially with tags I don't use all the time</p>
 	</body>
 </html>
