--- a/index.html
+++ b/index.html
@@ -17,5 +17,7 @@ Frontend Web Dev Learning	  </title>
 <h4>2. HTML Syntax</h4>
 <h5><a href="https://codepen.io/alexanderstran/pen/vprpay">L4 Mockup to Article</a></h5>
 <p> This was a nice review of basic HTML. I missed a superscript and it was good to practice being detail oriented especially with tags I don't use all the time</p>
+<h5><a href="https://codepen.io/alexanderstran/pen/JMBrOR">L6 Styling an Image</a></h5>
+<p>
 	</body>
 </html>
